repair things, add visible counter to index page

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.not-active {
+   pointer-events: none;
+   cursor: default;
+}
+
 body {
   font-family: Arial;
   position:relative;
